Disable backtrace analysis on CI
CircleCI runs stuff in unprivileged Docker containers and gdb requires
ptrace capabilities to attach to processes. Unfortunately, we'll get
no stack traces on CI.

Well, add an option to skip debugger analysis and just try crashing,
maybe that will output something interesting.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,7 +126,7 @@ jobs:
             echo
             echo Analyzing results...
             echo
-            ./tools/afl/analyze_crashes.sh
+            ./tools/afl/analyze_crashes.sh --no-debugger
             make clean
       - run:
           name: Fuzzing with Undefined Behavior Sanitizer
@@ -144,7 +144,7 @@ jobs:
             echo
             echo Analyzing results...
             echo
-            ./tools/afl/analyze_crashes.sh
+            ./tools/afl/analyze_crashes.sh --no-debugger
             make clean
       # TODO: 32-bit builds WITH_UBSAN=1
 
