--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,6 +148,7 @@ jobs:
       - image: cossacklabs/build:ubuntu-bionic
     environment:
       FUZZ_TIMEOUT: 30s
+      THEMIS_DEFAULT_PBKDF2_ITERATIONS: 10
       WITH_FATAL_WARNINGS: yes
       WITH_FATAL_SANITIZERS: yes
     steps:
