--- a/src/wrappers/themis/jsthemis/package.json
+++ b/src/wrappers/themis/jsthemis/package.json
@@ -1,11 +1,17 @@
 {
   "name": "jsthemis",
   "version": "0.12.0",
-  "description": "Themis is a data security library, providing users with high-quality security services for secure messaging of any kinds and flexible data storage. Themis is aimed at modern developers, with high level OOP wrappers for Ruby, Python, PHP, Java / Android and iOS / OSX. It is designed with ease of use in mind, high security and cross-platform availability.",
+  "description": "Themis is a convenient cryptographic library for data protection. It provides secure messaging with forward secrecy and secure data storage. Themis is aimed at modern development practices and has a unified API across 12 platforms, including Node.js, WebAssembly, Python, iOS/macOS, and Java/Android.",
   "main": "build/Release/jsthemis.node",
   "scripts": {
     "preuninstall": "rm -rf build/*"
   },
+    "keywords": {
+    "security",
+    "encryption",
+    "cryptography",
+    "themis"
+    },
   "author": {
     "name": "Cossack Labs",
     "email": "dev@cossacklabs.com",
