Broke some code, fixed some code xD

--- a/src/wrappers/themis/jsthemis/package.json
+++ b/src/wrappers/themis/jsthemis/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "preuninstall": "rm -rf build/*"
   },
-    "keywords": {
+    "keywords": [
     "security",
     "encryption",
     "cryptography",
     "themis"
-    },
+    ],
   "author": {
     "name": "Cossack Labs",
     "email": "dev@cossacklabs.com",
