--- a/src/wrappers/themis/wasm/package.json
+++ b/src/wrappers/themis/wasm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wasm-themis",
   "version": "0.12.1",
-  "description": "Themis data security library",
+  "description": "Themis is a convenient cryptographic library for data protection. It provides secure messaging with forward secrecy and secure data storage. Themis is aimed at modern development practices and has a unified API across 12 platforms, including WebAssembly, Node.js, Python, iOS/macOS, and Java/Android.",
   "main": "src/index.js",
   "scripts": {
     "test": "mocha"
@@ -16,7 +16,7 @@
     "cryptography",
     "themis"
   ],
-  "author": "Cossack Labs Limited",
+  "author": "Cossack Labs",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/cossacklabs/themis/issues"
