--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -188,6 +188,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       FUZZ_TIMEOUT: 30s
+      THEMIS_DEFAULT_PBKDF2_ITERATIONS: 10
       WITH_FATAL_SANITIZERS: yes
     steps:
       - name: Install system dependencies
