Use "actions/setup-node" to install Node.js
GitHub Actions really want to force their users to install stuff via
Actions, so they have broken NVM installation. (I'm kidding, of course,
but this *might* be related to recent acquisition of npm, Inc. by GitHub
slash Microsoft).

Anyways, since NVM in unexplicably broken, use more idiomatic way to
install Node.js here. This expands the test matrix enormously, but ship
first, ask questions later. We'll optimize build runs later.

Both JsThemis and WasmThemis need Node.js so update both of them.
Integration tests need it too.

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -64,15 +64,10 @@ jobs:
         with:
           toolchain: stable
           profile: minimal
-      - name: Install Node.js via NVM
-        run: |
-          # Install latest NVM as described in documentation:
-          # https://github.com/nvm-sh/nvm
-          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
-          source $HOME/.nvm/nvm.sh
-          # Install and use current LTS as recommended by Node.js
-          nvm install v10
-          nvm use v10
+      - name: Install Node.js 10.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10.x
       - name: Install Emscripten
         run: |
           # Install Emscripten toolchain as described in documentation:
