Install JsThemis without sudo
Using "sudo make jsthemis_install" will result in system Node.js being
used, not the one installed for testing. Run JsThemis installation as
a regular user. Ditto for WasmThemis (though it should not be affected).

The reason it needs to be run with sudo sometimes is that some previous
installer builds Themis as root so the build directory ends up being
owned by root and npm cannot move its stuff there. Apply a quickfix for
that, but if we do it properly, we should not be building stuff as root
in the first place.

I'm really seriously frustrated with this changeset so I don't have
mental capacity to debug this tangle at the moment. I'll leave a FIXME
there and hope to come back at it later.

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -129,12 +129,19 @@ jobs:
       - name: Install RustThemis (test tools)
         run: make rustthemis_integration_tools
       - name: Install JsThemis
-        run: sudo make jsthemis_install
+        run: |
+          echo Node.js: $(node --version)
+          echo npm: $(npm --version)
+          # FIXME(ilammy, 2020-03-20): don't run previous installers as root
+          # This makes "build" owned by root and JsThemis cannot move there.
+          # We should not have a reason to build stuff as root.
+          sudo chown $(id -u):$(id -g) build
+          make jsthemis_install
       - name: Install WasmThemis
         run: |
           source "$HOME/emsdk/emsdk_env.sh"
           emmake make wasmthemis BUILD_PATH=build-wasm
-          sudo make wasmthemis_install BUILD_PATH=build-wasm
+          make wasmthemis_install BUILD_PATH=build-wasm
       - name: Install PHPThemis
         run: |
           sudo make phpthemis_install
