Install git in "code-style" workflow
Since we're using a custom Docker image here, we need to have actual
git execuable available for actions/checkout@v2 to work properly with
submodules. Version 1 was able to use GitHub REST API but the new
version seems to have issues with that. Provide it with real git.

--- a/.github/workflows/code-style.yaml
+++ b/.github/workflows/code-style.yaml
@@ -45,7 +45,7 @@ jobs:
           # System nodejs requires old OpenSSL libraries, not modern ones :(
           apt install --yes make clang-8 clang-format-8 clang-tidy-8 libstdc++-8-dev \
             nodejs npm libssl1.0-dev \
-            default-jdk
+            default-jdk git
       - name: Check out code
         uses: actions/checkout@v2
         with:
