--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -33,6 +33,7 @@ jobs:
     strategy:
       matrix:
         go: ['1.11.13', '1.12.17', '1.13.8', '1.14']
+      fail-fast: false
     steps:
       - name: Install system dependencies
         run: |
