--- a/src/wrappers/themis/wasm/package.json
+++ b/src/wrappers/themis/wasm/package.json
@@ -22,6 +22,9 @@
     "url": "https://github.com/cossacklabs/themis/issues"
   },
   "homepage": "https://www.cossacklabs.com/themis/",
+  "dependencies": {
+    "fastestsmallesttextencoderdecoder": "^1.0.14"
+  },
   "devDependencies": {
     "mocha": "^7.1.1"
   }
