--- a/src/wrappers/themis/jsthemis/package.json
+++ b/src/wrappers/themis/jsthemis/package.json
@@ -4,6 +4,7 @@
   "description": "Themis is a convenient cryptographic library for data protection.",
   "main": "build/Release/jsthemis.node",
   "scripts": {
+    "test": "mocha",
     "preuninstall": "rm -rf build/*"
   },
   "repository": {
