--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -34,6 +34,8 @@ jobs:
   unit-tests:
     name: Unit tests
     runs-on: ${{ matrix.os }}
+    env:
+      SOTER_KDF_RUN_LONG_TESTS: yes
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
