Build Themis as regular user
Commit f79cd235 ("configure" script for platform detection, 2020-03-27)
keeps on giving! One side effect of performing configuration only once
on the first run is that if you initially install Themis with

    sudo make install

without running "make" first then "./configure" will be run as root too,
meaning that it may not see some toolchains installed locally for the
user, not globally in the system.

Rust's rustup is an example of toolchain installer which does not
install it's stuff into system *and* configures PATH in such way that
its local installation is not visible from within sudo.

This means that "sudo make install" wlll not see Rust toolchain and will
write empty RUST_VERSION variable to "configuration.mk". This will cause
"make test_rust" to do nothing and exit while printing a lovecraftian
message during CI runs:

    fatal: No names found, cannot describe anything.
    tput: No value for $TERM and no -T specified
    make: Nothing to be done for 'test_rust'.

(Other messages are unrelated, but funny nevertheless)

So... Install Themis by doing

    make
    sudo make install

to ensure that "./configure" sees Rust toolchain and the tests will
actually get run.

While we're here, update all other instances of Themis Core installation
with bare "sudo make install" to avoid such issue if it becomes actual.
However, most other toolchain installers seems to install their stuff
globally so the above issue is not actual for them right now.

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -93,7 +93,9 @@ jobs:
         with:
           submodules: true
       - name: Install Themis Core
-        run: sudo make install
+        run: |
+          make
+          sudo make install
       - name: Install ThemisPP
         run: sudo make themispp_install
       - name: Install PyThemis
