--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -47,7 +47,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install Themis Core
-        run: sudo make install
+        run: |
+          make
+          sudo make install
       - name: Install GoThemis
         run: |
           mkdir -p ~/go/src/$GOTHEMIS_IMPORT
@@ -67,7 +69,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install Themis Core
-        run: sudo make install
+        run: |
+          make
+          sudo make install
       - name: Install GoThemis
         run: |
           mkdir -p $HOME/go/src/$GOTHEMIS_IMPORT
