Simplify code sample for Secure Cell
Update the code sample like in other languages. Instead of a simple file
encryption tool (which is not a generally good use case for Secure Cell)
provide a showcase of Secure Cell APIs and how they impact the output.

--- a/.github/workflows/test-rust.yaml
+++ b/.github/workflows/test-rust.yaml
@@ -118,9 +118,7 @@ jobs:
       - name: Test examples (Secure Cell)
         if: always()
         run: |
-          cargo run --example secure_cell -- --encrypt --password "secret" README.md     README.md.enc
-          cargo run --example secure_cell -- --decrypt --password "secret" README.md.enc README.md.dec
-          diff -q README.md README.md.dec
+          cargo run --example secure_cell
       - name: Test examples (Secure Message)
         if: always()
         run: |
